sorted all collections and adding delete button. should create working for delete mapping