@@ -13,6 +13,8 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
 
 import java.security.Principal;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -33,7 +35,9 @@ public class NoteController {
         if (loggedUser == null) {
             return "redirect:/login"; // or show an error
         }
-        List<Note> noteList = loggedUser.getNotes().stream().filter(Note::isActive).filter(note -> note.getType().toString().equals("NOTE")).collect(Collectors.toList());
+        List<Note> noteList = loggedUser.getNotes().stream().filter(Note::isActive).filter(note -> note.getType().toString().equals("NOTE"))
+                .collect(Collectors.toList());
+        Collections.reverse(noteList);
         model.addAttribute("myNotes", noteList);
         return "my-notes";
     }
@@ -44,7 +48,8 @@ public class NoteController {
         if (loggedUser == null) {
             return "redirect:/login"; // or show an error
         }
-        List<Note> taskList = loggedUser.getNotes().stream().filter(Note::isActive).filter(note -> note.getType().toString().equals("TASK")).collect(Collectors.toList());
+        List<Note> taskList = loggedUser.getNotes().stream().filter(Note::isActive).filter(note -> note.getType().toString().equals("TASK"))
+                .sorted(Comparator.comparing(Note::getReminderTime).reversed()).collect(Collectors.toList());
         model.addAttribute("myTasks", taskList);
         return "my-tasks";
     }
@@ -55,7 +60,7 @@ public class NoteController {
         if (loggedUser == null) {
             return "redirect:/login";
         }
-        List<Note> archivedNotes = loggedUser.getNotes().stream().filter(note -> !note.isActive()).toList();
+        List<Note> archivedNotes = loggedUser.getNotes().stream().filter(note -> !note.isActive()).collect(Collectors.toList());
         model.addAttribute("archivedNotes", archivedNotes);
         return "archived-notes";
 
@@ -121,6 +126,7 @@ public class NoteController {
         model.addAttribute("editNoteDTO", note);
         return "edit-note";
     }
+
     @GetMapping("/my-tasks/edit-task/{id}")
     public String showEditTaskPage(@PathVariable Long id, Model model) {
         Note note = noteService.viewNoteOrTask(id);
@@ -141,6 +147,24 @@ public class NoteController {
         noteService.editNoteOrTask(id, editNoteDTO);
         return "redirect:/my-tasks";
 
+    }
+
+    @GetMapping("/my-notes/delete-note/{id}")
+    public String deleteNote(@PathVariable Long id) {
+        noteService.deleteNote(id);
+        return "redirect:/my-notes";
+    }
+
+    @GetMapping("/my-tasks/delete-task/{id}")
+    public String deleteTask(@PathVariable Long id) {
+        noteService.deleteNote(id);
+        return "redirect:/my-tasks";
+    }
+
+    @GetMapping("/archived-notes/delete-all")
+    public String deleteAllArchived() {
+        noteService.deleteArchived();
+        return "redirect:/my-profile";
     }
 
 }
